# bazel-ios-app

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bazel-ios-app  platform_mappings
Cpp/: BUILD.bazel  hello.cc  hello.h  prover_main.cc
Sources/: BUILD.bazel  BazelApp.swift
