load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "UI",
    srcs = glob(["**/*.swift"]),
    copts = ["-application-extension"],
    data = glob(
        ["Resources/**"],
        exclude = ["**/.DS_Store"],
    ),
    module_name = "UI",
    visibility = ["//visibility:public"],
    deps = [
        "//Cpp:hello",
    ],
    alwayslink = True,
)
